<resources>
    <string name="app_name">TestApplication</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_have">You have</string>
    <string name="in_your_account">in your account.</string>
    <string name="no_transactions_yet">No transactions yet</string>
    <string name="make_a_transfer">Make a transfer</string>
    <string name="hint_password">Password</string>
    <string name="helper_password">Enter you account password</string>
    <string name="hint_username">Username</string>
    <string name="helper_username">Enter your account username</string>
    <string name="btn_login">Login</string>
    <string name="get_started">Get Started</string>
    <string name="ok">ok</string>
    <string name="logout_title">Do you want to logout?</string>
    <string name="yes_logout">Yes, logout</string>
    <string name="cancel">cancel</string>
    <string name="logout_message">You will be logged out securely from our application.</string>
    <string name="refresh">refresh</string>
    <string name="hint_recipient">Recipient</string>
    <string name="helper_recipient">Select the payee to transfer</string>
    <string name="hint_date">Date of transfer</string>
    <string name="helper_calendar">Select the date</string>
    <string name="hint_comments">Comments</string>
    <string name="hint_amount">Amount</string>
    <string name="helper_comments">Enter you comments</string>
    <string name="helper_amount">How much you want to transfer</string>
    <string name="currency">SGD</string>
    <string name="general_error">We are unable to reach our network, please try again.</string>
    <string name="go_back">Go Back</string>
    <string name="btn_transfer">Transfer</string>
    <string name="transaction_success">Success!</string>
</resources>